<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GetUserNames">

    <TextView
        android:id="@+id/homeTicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/ticUserNameTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/player1Icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_person_pin_circle"
        app:layout_constraintTop_toTopOf="@id/firstPlayerName"
        app:layout_constraintBottom_toBottomOf="@id/firstPlayerName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/firstPlayerName"
        />
    <EditText
        android:id="@+id/firstPlayerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:hint="@string/FirstName"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/homeTicText"
        app:layout_constraintStart_toEndOf="@id/player1Icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/secondPlayerName"
        />
    <View
        android:id="@+id/player2Icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_person_pin_circle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/secondPlayerName"
        app:layout_constraintBottom_toBottomOf="@id/secondPlayerName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/secondPlayerName"
        />
    <EditText
        android:id="@+id/secondPlayerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:hint="@string/SecondName"
        app:layout_constraintTop_toBottomOf="@id/firstPlayerName"
        app:layout_constraintStart_toEndOf="@id/player2Icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/homeSubmitButton"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeSubmitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:padding="20dp"
        android:background="@drawable/play_button_design"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondPlayerName"
        />
</androidx.constraintlayout.widget.ConstraintLayout>